# attune

./: .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  .semgrepignore  AGENTS.md  AGENTS.md.template  Cargo.toml  Makefile  README.md  config.development.yaml  config.example.yaml  config.test.yaml  deny.toml  docker-compose.agent.yaml  docker-compose.e2e.yaml  docker-compose.override.yml.example  docker-compose.standalone.yaml  docker-compose.yaml  env.docker.example  package-lock.json  package.json  semgrep-findings.md  systemctl status postgresql.service  test_password.rs
crates/api/: Cargo.toml
crates/api/src/: authz.rs  inquiry_timeout.rs  lib.rs  main.rs  openapi.rs  postgres_listener.rs  server.rs  state.rs  webhook_security.rs
crates/api/src/auth/: jwt.rs  ldap.rs  middleware.rs  mod.rs  oidc.rs  password.rs
crates/api/src/dto/: action.rs  analytics.rs  artifact.rs  audit.rs  auth.rs  common.rs  event.rs  execution.rs  history.rs  inquiry.rs  key.rs  mod.rs  pack.rs  permission.rs  rule.rs  runtime.rs  trigger.rs  webhook.rs  work_queue.rs  worker.rs  workflow.rs
crates/api/src/middleware/: audit.rs  cors.rs  error.rs  logging.rs  mod.rs
crates/api/src/routes/: actions.rs  agent.rs  analytics.rs  artifacts.rs  audit.rs  auth.rs  events.rs  executions.rs  health.rs  history.rs  inquiries.rs  internal_files.rs  keys.rs  mod.rs  packs.rs  permissions.rs  retention.rs  rules.rs  runtimes.rs  sensor_logs.rs  triggers.rs  webhooks.rs  work_queues.rs  workers.rs  workflows.rs
crates/api/src/validation/: mod.rs  params.rs
crates/api/tests/: README.md  SSE_TESTS_README.md  agent_tests.rs  execution_token_permissions_e2e.rs  health_and_auth_tests.rs  helpers.rs  inquiry_authz_tests.rs  pack_registry_tests.rs  pack_workflow_tests.rs  permissions_api_tests.rs  rbac_scoped_resources_api_tests.rs  sse_execution_stream_tests.rs  webhook_api_tests.rs  webhook_security_tests.rs  work_queue_api_tests.rs  workflow_tests.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: client.rs  config.rs  lib.rs  main.rs  output.rs  wait.rs
crates/cli/src/commands/: action.rs  artifact.rs  audit.rs  auth.rs  config.rs  execution.rs  key.rs  mod.rs  pack.rs  pack_index.rs  rule.rs  sensor.rs  trigger.rs  workflow.rs
crates/cli/tests/: KNOWN_ISSUES.md  README.md  pack_registry_tests.rs  test_actions.rs  test_auth.rs  test_config.rs  test_executions.rs  test_packs.rs  test_rules_triggers_sensors.rs  test_workflows.rs
crates/cli/tests/common/: mod.rs
crates/common/: Cargo.toml
crates/common/examples/: hash_password.rs
crates/common/src/: agent_bootstrap.rs  agent_runtime_detection.rs  config.rs  crypto.rs  db.rs  error.rs  lib.rs  models.rs  pack_environment.rs  queue_definition.rs  rbac.rs  runtime_detection.rs  scheduling.rs  schema.rs  secret_values.rs  system_alert.rs  template_resolver.rs  test_executor.rs  utils.rs  version_matching.rs
crates/common/src/artifact_transport/: api.rs  detection.rs  mod.rs  volume.rs
crates/common/src/audit/: emitter.rs  mod.rs  repository.rs  writer.rs
crates/common/src/auth/: crypto_provider.rs  integration_token.rs  jwt.rs  mod.rs
crates/common/src/mq/: config.rs  connection.rs  consumer.rs  error.rs  message_queue.rs  messages.rs  mod.rs  publisher.rs
crates/common/src/pack_registry/: client.rs  dependency.rs  installer.rs  loader.rs  mod.rs  storage.rs
crates/common/src/pack_transport/: api.rs  mod.rs  volume.rs
crates/common/src/repositories/: action.rs  analytics.rs  artifact.rs  entity_history.rs  event.rs  execution.rs  execution_admission.rs  execution_secret_value.rs  identity.rs  inquiry.rs  integration_token.rs  key.rs  maintenance.rs  (+15 more)
crates/common/tests/: README.md  action_repository_tests.rs  enforcement_repository_tests.rs  event_repository_tests.rs  execution_repository_tests.rs  helpers.rs  identity_repository_tests.rs  inquiry_repository_tests.rs  key_repository_tests.rs  migration_tests.rs  notification_repository_tests.rs  pack_environment_coordination_tests.rs  pack_repository_tests.rs  permission_repository_tests.rs  queue_stats_repository_tests.rs  repository_artifact_tests.rs  repository_runtime_tests.rs  repository_worker_tests.rs  rule_repository_tests.rs  sensor_repository_tests.rs  trigger_repository_tests.rs  webhook_tests.rs  work_queue_repository_tests.rs
crates/core-enqueue-action/: Cargo.toml
crates/core-enqueue-action/src/: lib.rs
crates/core-timer-sensor/: Cargo.toml  README.md
crates/core-timer-sensor/src/: api_client.rs  config.rs  main.rs  rule_listener.rs  timer_manager.rs  token_refresh.rs  types.rs
crates/executor/: Cargo.toml
crates/executor/benches/: context_clone.rs
crates/executor/src/: completion_listener.rs  dead_letter_handler.rs  enforcement_processor.rs  event_processor.rs  execution_manager.rs  inquiry_handler.rs  lib.rs  main.rs  policy_enforcer.rs  queue_dispatcher.rs  queue_manager.rs  retry_manager.rs  scheduler.rs  service.rs  timeout_monitor.rs  work_queue_events.rs  worker_health.rs
crates/executor/tests/: README.md  fifo_ordering_integration_test.rs  policy_enforcer_tests.rs  worker_placement_scheduling_e2e.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: main.rs  postgres_listener.rs  service.rs  subscriber_manager.rs  websocket_server.rs
crates/sensor/: Cargo.toml
crates/sensor/.sqlx/: query-ddfd543c0ef1e25e0a2e5830faf285b02903258ef874b82bd0916b98114b8023.json  query-e65380ade25b997bb41733d1b4fa510f1946fd2aa42de1c6f14e36a3f11b2aa1.json
crates/sensor/src/: agent_main.rs  lib.rs  main.rs  rule_lifecycle_listener.rs  sensor_log.rs  sensor_manager.rs  sensor_worker_registration.rs  service.rs  startup.rs  template_resolver.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: main.rs
crates/worker/: Cargo.toml
crates/worker/src/: agent_main.rs  artifacts.rs  dynamic_runtime.rs  env_setup.rs  executor.rs  heartbeat.rs  lib.rs  main.rs  registration.rs  runtime_detect.rs  secrets.rs  service.rs  test_executor.rs  version_verify.rs
crates/worker/tests/: dependency_isolation_test.rs  log_truncation_test.rs  security_tests.rs
(+1933 files in other folders)
