[package]
name = "attune-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "attune"
path = "src/main.rs"

[[bin]]
name = "attune-mcp"
path = "src/bin/attune-mcp.rs"

[dependencies]
# Internal dependencies
attune-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# CLI framework
clap = { workspace = true, features = ["derive", "env", "string"] }

# HTTP client
reqwest = { workspace = true, features = ["multipart", "stream"] }
eventsource-stream = { workspace = true }
axum = { workspace = true }
webpki-root-certs = "1.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Configuration
config = { workspace = true }
dirs = "6.0"

# URL encoding
urlencoding = "2.1"
url = { workspace = true }

# Archive/compression
tar = { workspace = true }
flate2 = { workspace = true }

# WebSocket client (for notifier integration)
tokio-tungstenite = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Terminal UI
colored = "3.1"
comfy-table = { version = "7.2", features = ["custom_styling"] }
dialoguer = "0.12"
terminal_size = "0.4"

# Authentication
jsonwebtoken = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6"
assert_cmd = "2.2"
predicates = "3.1"
mockito = "1.7"
tokio-test = "0.4"
