[package]
name = "core-timer-sensor"
version = "0.1.0"
edition = "2021"
authors = ["Attune Contributors"]
license.workspace = true
description = "Standalone timer sensor runtime for Attune core pack"

[[bin]]
name = "attune-core-timer-sensor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Message queue
lapin = { workspace = true }
futures = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time handling
chrono = { workspace = true }

# Cron scheduling
tokio-cron-scheduler = "0.15"

# Recurrence rules (RFC 5545 RRULE) for the rruletimer trigger
rrule = "0.14"
chrono-tz = "0.10"

# CLI
clap = { workspace = true, features = ["derive"] }

# Utilities
uuid = { workspace = true }
urlencoding = "2.1"
base64 = "0.22"

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
