[package]
name = "core-timer-sensor"
version = "0.1.0"
edition = "2021"
authors = ["Attune Contributors"]
license = "Apache-2.0"
description = "Standalone timer sensor runtime for Attune core pack"

# This crate is intentionally NOT a workspace member of the Attune root
# workspace (see the `exclude` list in /Cargo.toml). It is built solely by
# docker/Dockerfile.pack-binaries and produces a static musl binary that ships
# in the packs_data volume. Keeping it out of the workspace means service
# Dockerfiles don't need to know about it.

[[bin]]
name = "attune-core-timer-sensor"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.52", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.13", features = ["json"] }

# Message queue
lapin = "4.5"
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Cron scheduling
tokio-cron-scheduler = "0.15"

# Recurrence rules (RFC 5545 RRULE) for the rruletimer trigger
rrule = "0.14"
chrono-tz = "0.10"

# CLI
clap = { version = "4.6", features = ["derive"] }

# Utilities
uuid = { version = "1.23", features = ["v4", "serde"] }
urlencoding = "2.1"
base64 = "0.22"

[dev-dependencies]
mockall = "0.14"
tempfile = "3.27"
