[package]
name = "attune-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "attune_executor"
path = "src/lib.rs"

[[bin]]
name = "attune-executor"
path = "src/main.rs"

[dependencies]
attune-common = { path = "../common" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
lapin = { workspace = true }
redis = { workspace = true }
dashmap = { workspace = true }
serde_yaml_ng = { workspace = true }
validator = { workspace = true }
futures = { workspace = true }
rand = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
criterion = "0.8"

[[bench]]
name = "context_clone"
harness = false
