[package]
name = "attune-sensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "attune_sensor"
path = "src/lib.rs"

[[bin]]
name = "attune-sensor"
path = "src/main.rs"

[[bin]]
name = "attune-sensor-agent"
path = "src/agent_main.rs"

[dependencies]
attune-common = { path = "../common" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }

chrono = { workspace = true }
clap = { workspace = true }
lapin = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
cron = "0.16"
reqwest = { workspace = true }
hostname = "0.4"
tempfile = { workspace = true }
uuid = { workspace = true }
libc = "0.2"
